Allow breaking words to avoid overflow and its weird issues

--- a/site/style.css
+++ b/site/style.css
@@ -165,6 +165,11 @@ span.select2-container--default
   display: flex;
   flex-direction: column;
 }
+.entry p {
+  word-break: break-word;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
 
 /* ENTRIES */
 .entry {
